# Elrond-Bridge-SM

./: Cargo.toml  README.md
meta/: Cargo.toml
meta/src/: main.rs
src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
