[package]
name = "elornd-bridge-sc"
version = "1.0.0"
authors = [ "David Tanaka <developer@tlchain.network>",]
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.elornd-bridge-sc]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.31.1"

[dependencies.elrond-wasm-output]
version = "0.31.1"
features = [ "wasm-output-mode",]
